tests/errors/spawnNotSendStruct.milo
// @error: cannot send 'u' of type 'Unsafe' across threads

from "std/thread" import { spawn, threadJoin }

struct Unsafe {
    p: *u8,
}

fn main(): i32 {
    unsafe {
        let u = Unsafe { p: 0 as *u8 }
        let t = spawn(move (): void => {
            print("bad: ", u.p as i64)
        })!
        threadJoin(t)!
    }
    return 0
}
